adicionado conteúdo da aula online1 e presencial1

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
         <nav>
             <img class="logo" src="imagem/senai-logo.png" alt="Logo">
             <ul>
-                <a href="https://www.globo.com">Jogos</a>
-                <a href="https://www.mercadolivre.com.br">Hardware</a>
+                <a href="index.html">Jogos</a>
+                <a href="hardware.html">Hardware</a>
                 <a href="https://www.americanas.com.br/celulares">Celulares</a>
                 <a href="https://www,magazineluiza.com.br/computadores">Pc Gamer</a>
                 <a href="contato.html">Contato</a>
             </ul>
-            <button>Login</button>
+            <button class="btn-login">Login</button>
         </nav>
     </header>
     <div class="banner">
@@ -183,8 +183,8 @@
 
                 <div class="menu_rodape">
 
-                    <li><a href="#">jogos</a></li>
-                    <li><a href="#">hardware</a></li>
+                    <li><a href="index.html">jogos</a></li>
+                    <li><a href="hardware.html">hardware</a></li>
                     <li><a href="#">Celular</a></li>
                     <li><a href="#">PC Gamer</a></li>
                     <li><a href="#">Contato</a></li>
